# zima

./: .gitignore  Cargo.toml  README.md  devenv.nix
benches/: bootstrap_bench.rs
src/: least_squares.rs  lib.rs
src/display/: mod.rs
src/hypothesis/: dagostino.rs  kolmogorov.rs  mean.rs  mod.rs  shapiro.rs  variance.rs
src/math/: avx.rs  metric.rs  mod.rs  vector.rs
src/quantile/: mod.rs
src/resample/: block_bootstrap.rs  bootstrap.rs  flipper.rs  jackknife.rs  mod.rs  shuffle.rs  subsampling.rs  wild_bootstrap.rs
src/sample/: mod.rs  read.rs
src/statistics/: cdf.rs  ci.rs  mean.rs  mod.rs  quantile.rs  se.rs  studentized.rs  studentized_bootstrap.rs
src/statistics/basic/: cumulant.rs  kurtosis.rs  mod.rs  skewness.rs  variance.rs
